// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert from jpg to webp 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/6060dab00c4595a4a88a27192398bcf5-500.webp",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/b876032f02904c9a2f93d9116471ff13-750.webp",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/c94d312c65954f4c967fbaeb9ac4f000-1000.webp",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/6060dab00c4595a4a88a27192398bcf5-500.webp",
  "srcSet": "foobar/6060dab00c4595a4a88a27192398bcf5-500.webp 500w,foobar/b876032f02904c9a2f93d9116471ff13-750.webp 750w,foobar/c94d312c65954f4c967fbaeb9ac4f000-1000.webp 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`convert from png to webp 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/d42dd47dda0e1fb5e29a49ed75374bf6-500.webp",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/a01387960c0fdae534983959778dfb75-513.webp",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/d42dd47dda0e1fb5e29a49ed75374bf6-500.webp",
  "srcSet": "foobar/d42dd47dda0e1fb5e29a49ed75374bf6-500.webp 500w,foobar/a01387960c0fdae534983959778dfb75-513.webp 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "srcSet": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "toString": [Function],
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/32eef0247bb077de607da3d1f021d138-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
  "srcSet": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg 500w,foobar/32eef0247bb077de607da3d1f021d138-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
  "srcSet": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/31316a4269319e254e9c8c4726f23e2a-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/e22aaf470a7a7c6ffb2260200c9219c8-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/32eef0247bb077de607da3d1f021d138-1000x900.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/test/31316a4269319e254e9c8c4726f23e2a-500x450.jpg",
  "srcSet": "foobar/test/31316a4269319e254e9c8c4726f23e2a-500x450.jpg 500w,foobar/test/e22aaf470a7a7c6ffb2260200c9219c8-750x675.jpg 750w,foobar/test/32eef0247bb077de607da3d1f021d138-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg",
      "width": 100,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg",
  "srcSet": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/51212ab63bb2e2a6ebcd47e416d9ddd5-200.jpg",
      "width": 200,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg",
  "srcSet": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg 100w,foobar/51212ab63bb2e2a6ebcd47e416d9ddd5-200.jpg 200w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`png 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/d42dd47dda0e1fb5e29a49ed75374bf6-500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/a01387960c0fdae534983959778dfb75-513.png",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/d42dd47dda0e1fb5e29a49ed75374bf6-500.png",
  "srcSet": "foobar/d42dd47dda0e1fb5e29a49ed75374bf6-500.png 500w,foobar/a01387960c0fdae534983959778dfb75-513.png 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/3b785e0cf3c48bbc4a709a66986ec10e-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/149a3d69bc16ee3b406a4958420dc6f8-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/3b785e0cf3c48bbc4a709a66986ec10e-500.jpg",
  "srcSet": "foobar/3b785e0cf3c48bbc4a709a66986ec10e-500.jpg 500w,foobar/149a3d69bc16ee3b406a4958420dc6f8-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
  "srcSet": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 540,
  "images": Array [
    Object {
      "height": 540,
      "path": "foobar/01168b3ce0529e3b728756e48bf8512e-600.jpg",
      "width": 600,
    },
    Object {
      "height": 630,
      "path": "foobar/0649b5b1b66f3609b9f1084b816c2802-700.jpg",
      "width": 700,
    },
    Object {
      "height": 720,
      "path": "foobar/34eb182358c4c30f9262ecac22cc5ab0-800.jpg",
      "width": 800,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/01168b3ce0529e3b728756e48bf8512e-600.jpg",
  "srcSet": "foobar/01168b3ce0529e3b728756e48bf8512e-600.jpg 600w,foobar/0649b5b1b66f3609b9f1084b816c2802-700.jpg 700w,foobar/34eb182358c4c30f9262ecac22cc5ab0-800.jpg 800w",
  "toString": [Function],
  "width": 600,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/ce6d807877acb0db226ae8a54baf176c-167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/2ed82e5ef0591bb80e721d6c82155307-234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/9b164ff4b53969c2efc15af5614d2845-300.jpg",
      "width": 300,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg",
  "srcSet": "foobar/f3b25440ddcd15bf8d134645a5942dcc-100.jpg 100w,foobar/ce6d807877acb0db226ae8a54baf176c-167.jpg 167w,foobar/2ed82e5ef0591bb80e721d6c82155307-234.jpg 234w,foobar/9b164ff4b53969c2efc15af5614d2845-300.jpg 300w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 600,
      "path": "foobar/21cbfa574946fda32b8ca811b659d5ec-667.jpg",
      "width": 667,
    },
    Object {
      "height": 751,
      "path": "foobar/b9d644735c53c4a52a7aa223997f4dde-834.jpg",
      "width": 834,
    },
    Object {
      "height": 900,
      "path": "foobar/32eef0247bb077de607da3d1f021d138-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
  "srcSet": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg 500w,foobar/21cbfa574946fda32b8ca811b659d5ec-667.jpg 667w,foobar/b9d644735c53c4a52a7aa223997f4dde-834.jpg 834w,foobar/32eef0247bb077de607da3d1f021d138-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/e22aaf470a7a7c6ffb2260200c9219c8-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/32eef0247bb077de607da3d1f021d138-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgICAwAAAAAAAAAAAAAAAAcDBgEIAgQF/8QALRAAAQMDAgUEAQQDAAAAAAAAAQIDBAAFEQYhBxITMUEIIlFhFBYycYIjUoH/xAAYAQADAQEAAAAAAAAAAAAAAAAAAQIDBP/EABwRAAMAAwADAAAAAAAAAAAAAAABAgMRMQQSIv/aAAwDAQACEQMRAD8A8m9+nVEie0LRcYcCEVZeV01lxCfhKc4UfskYrpK9M0hN0YcRqpl2EFEupdhkOY8AYVg/ecVsm86xGjOyZDjbTDKStxxWyUJAyST4ApRam9QmjLZJUxa4sy8lO3VawyyT9KVuf5xXQ5ldM02Va+ema0SWiu23+TEkb/uYSps/1yCP+GqvI9OWr7PKiT7PdbddHGzl1pWWD/UnIO3zimroPjzpnUd5ZtU23ybO/JPKy446lxoq8AkAFOfkjFNVmXBfI6EuK7zHlHI6hWT8bHvScRSKmqlpoSejeDkhcpqbq1bBbQeb8FhXMFEf7r8j6Hf5op4FAIxuf5opRgxwtJGuTysuR7piT1Zw81/dLJL/AFZxGW/b48dbi22/8ba+VJPvwACNu5zWtX4ZcVltSXUAA5R7sjtv8VvrLt0OXDdiy2EvtSElDrLnuQsHwQdjS/vXCSNI1fB1FakwICoxSHWBGHScSn9pCU4wobfXb4qbjfDJVoRHDPhne74ubJSpMB+2vpb6ckFKubl5u3jYim1wj4ZzNNa1YvTj8cMIbUuUOfm6j5CgAkYHtHMDk/dXe+2m9LCkISgqle1yS01hzmA9pJByPjJ7VPwstuoGNOdPUbq3pCZLnTfWkBTrefaSB284pKPoPZ6LgCle4yB5FFY6BTkg7UVuQSoTuTk7VxcyDkE0UUnwDDKioKKt6lVskDPeiiqQANxzHue9FFFAH//Z",
  "src": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
  "srcSet": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg 500w,foobar/e22aaf470a7a7c6ffb2260200c9219c8-750.jpg 750w,foobar/32eef0247bb077de607da3d1f021d138-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/e22aaf470a7a7c6ffb2260200c9219c8-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/32eef0247bb077de607da3d1f021d138-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg",
  "srcSet": "foobar/31316a4269319e254e9c8c4726f23e2a-500.jpg 500w,foobar/e22aaf470a7a7c6ffb2260200c9219c8-750.jpg 750w,foobar/32eef0247bb077de607da3d1f021d138-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;
